tests/baselines/reference/derivedClassSuperProperties.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(9,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(10,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(17,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(18,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(18,32): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(25,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(26,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(27,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(33,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(34,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(34,32): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(35,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(50,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(66,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(73,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(81,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(158,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(160,18): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(163,18): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(173,5): error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts(175,14): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperProperties.ts (21 errors) ====
    class Base {
        constructor(a?) { }
    
        receivesAnything(param?) { }
    }
    
    class Derived1 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived2 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything(this);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
                                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived3 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
            super(this);
    ~~~~~~~~~~~~~~~~~~~~
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived4 extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            super.receivesAnything(this);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
                                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(this);
    ~~~~~~~~~~~~~~~~~~~~
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class Derived5 extends Base {
        prop = true;
        constructor() {
            super();
            super.receivesAnything();
        }
    }
    
    class Derived6 extends Base {
        prop = true;
        constructor() {
            super(this);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super.receivesAnything();
        }
    }
    
    class Derived7 extends Base {
        prop = true;
        constructor() {
            super();
            super.receivesAnything(this);
        }
    }
    
    class Derived8 extends Base {
        prop = true;
        constructor() {
            super(this);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super.receivesAnything(this);
        }
    }
    
    class DerivedWithArrowFunction extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            (() => this)();
    ~~~~~~~~~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithFunctionDeclaration extends Base {
        prop = true;
        constructor() {
        ~~~~~~~~~~~~~~~
            function declaration() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                return this;
    ~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithFunctionDeclarationAndThisParam extends Base {
        prop = true;
        constructor() {
            function declaration(param = this) {
                return param;
            }
            super();
        }
    }
    
    class DerivedWithFunctionExpression extends Base {
        prop = true;
        constructor() {
            (function () {
                return this;
            })();
            super();
        }
    }
    
    class DerivedWithClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(class { });
            super();
        }
    }
    
    class DerivedWithDerivedClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(class extends Base {
                constructor() {
                    super();
                }
            });
            super();
        }
    }
    
    class DerivedWithNewDerivedClassExpression extends Base {
        prop = true;
        constructor() {
            console.log(new class extends Base {
                constructor() {
                    super();
                }
            }());
            super();
        }
    }
    
    class DerivedWithObjectAccessors extends Base {
        prop = true;
        constructor() {
            const obj = {
                get prop() {
                    return true;
                },
                set prop(param) {
                    this._prop = param;
                }
            };
            super();
        }
    }
    
    class DerivedWithObjectAccessorsUsingThis extends Base {
        propName = "prop";
        constructor() {
        ~~~~~~~~~~~~~~~
            const obj = {
    ~~~~~~~~~~~~~~~~~~~~~
                get [this.propName]() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                     ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                    return true;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                },
    ~~~~~~~~~~~~~~
                set [this.propName](param) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                     ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
                    this._prop = param;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
            };
    ~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithObjectComputedPropertyName extends Base {
        propName = "prop";
        constructor() {
        ~~~~~~~~~~~~~~~
            const obj = {
    ~~~~~~~~~~~~~~~~~~~~~
                [this.propName]: true,
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            };
    ~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor to refer to 'super' or 'this' when a derived class contains initialized properties or has parameter properties.
    }
    
    class DerivedWithObjectMethod extends Base {
        prop = true;
        constructor() {
            const obj = {
                getProp() {
                    return this;
                },
            };
            super();
        }
    }
    